Fixed bug where results description does not text wrap as well as bug in Safari browser where pages are smaller at the bottom

--- a/app/assets/stylesheets/desktop/resultPage/resultGenerationPage.scss
+++ b/app/assets/stylesheets/desktop/resultPage/resultGenerationPage.scss
@@ -12,7 +12,7 @@
 		padding-left: 10vw;
 		width: 100vw;
 		height: auto;
-		max-height: 95%;
+		max-height: 90%;
 		display: flex;
 		flex-direction: column;
 	}
